# Valgo

./: .gitignore  .gitmodules
valgo-admin-api/: Dockerfile  README.md  pyproject.toml
valgo-admin-api/admin_api/: main.py
valgo-admin-api/admin_api/routes/: accounts.py  audit.py  data_sources.py  nodes.py  risk.py  signals.py  strategies.py
valgo-admin-ui/: .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
valgo-admin-ui/src/: App.jsx  api.ts  index.css
valgo-auth-refresh/: .lambda  README.md  pyproject.toml
valgo-auth-refresh/scripts/: package.sh
valgo-auth-refresh/valgo_auth_refresh/: handler.py  kite_login.py  totp.py
valgo-common/: README.md  pyproject.toml
valgo-common/tests/: test_models.py
valgo-common/valgo_common/: config.py  dynamodb.py  logging.py  models.py  notifier.py  redis_client.py
valgo-decision/: Dockerfile  README.md  pyproject.toml
valgo-decision/decision/: dataframe_indicators.py  greeks.py  greeks_engine.py  indicators.py  ma_optimizer.py  main.py  option_selector.py
valgo-decision/decision/strategies/: base.py  breakout_options.py  ema_crossover.py  mcx_multi.py  mcx_multi_tick.py  st_psar_confluence.py
valgo-decision/scripts/: backtest.py  run_optimizer.py  test_greeks.py  to_excel.py  uat_validator.py
valgo-decision/scripts/output/: nifty_backtest_2026-05-29.xlsx  nifty_bars_2026-05-29.csv  nifty_trades_2026-05-29.csv  uat_report_NIFTY_20260603_155246.json
valgo-decision/tests/: test_st_psar_confluence.py
valgo-docs/: README.md  architecture.md  branching.md  runbook.md  sebi-compliance.md
valgo-execution-node/: Dockerfile  README.md  pyproject.toml
valgo-execution-node/execution_node/: api_helper.py  broker_adapter.py  check.py  main.py  shoonya_adapter.py  shoonya_token.txt
valgo-execution-node/scripts/: shoonya_auto_login.py  shoonya_http_login.py  shoonya_login.py
valgo-execution-router/: Dockerfile  README.md  pyproject.toml
valgo-execution-router/execution_router/: dispatcher.py  main.py  rate_limiter.py  risk.py
valgo-infra/: README.md  main.tf  outputs.tf  variables.tf
valgo-infra/envs/dev/: backend.tf.example  main.tf
valgo-infra/envs/prod/: main.tf
valgo-infra/modules/auth/: main.tf
valgo-infra/modules/compute/: main.tf  variables.tf
valgo-infra/modules/network/: main.tf  variables.tf
valgo-ingestor/: Dockerfile  README.md  pyproject.toml
valgo-ingestor/ingestor/: failover.py  fyers_source.py  historical.py  instruments.py  kite_check.py  kite_rest_source.py  kite_source.py  main.py  normalizer.py  shoonya_source.py  ws_check.py
valgo-ingestor/tests/: test_normalizer.py
valgo-platform/: .gitignore  Makefile  README.md  bootstrap.sh  dev.env.cloud.example  dev.env.local.example  docker-compose.yml
valgo-platform/scripts/: init-ddb.py
valgo-webhook/: .gitignore  Dockerfile  README.md  pyproject.toml
valgo-webhook/webhook/: main.py
