[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "valgo-auth-refresh"
version = "0.1.0"
description = "Daily Kite authentication refresh — AWS Lambda"
requires-python = ">=3.11"
dependencies = [
    # Lambda layer ships these — keep this list minimal so the deployment zip stays small
    "kiteconnect>=5.0",
    "pyotp>=2.9",
    "boto3>=1.34",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.3", "mypy>=1.9"]

[tool.setuptools.packages.find]
where = ["."]
include = ["valgo_auth_refresh*"]
