[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "valgo-common"
version = "0.1.0"
description = "Shared models, config, Redis/DynamoDB clients, and logging for Valgo services"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Valgo" }]
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "boto3>=1.34",
    "aioboto3>=12.3",
    "redis[hiredis]>=5.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.9",
    "moto[dynamodb]>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["valgo_common*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
