[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "valgo-decision"
version = "0.1.0"
description = "Decision engine — runs strategies on Redis tick stream, emits orders"
requires-python = ">=3.11"
dependencies = [
    "valgo-common>=0.1,<0.2",
    "httpx>=0.27",
    "numpy>=1.26",
    "pandas>=2.2",
    "pytz",
]

[project.optional-dependencies]
# TA-Lib (https://github.com/ta-lib/ta-lib-python) is heavy: requires the
# underlying libta-lib C library on the system before `pip install`. Strategies
# that need TA-Lib indicators install with [indicators]. The base install
# allows running pure-Python strategies without the C dependency.
indicators = [
    "TA-Lib>=0.4.28",
]

# pandas-ta — pure Python, used by bar/DataFrame-style strategies (e.g. MCX
# multi-commodity). Installs cleanly without a C library, so it's lighter
# than the [indicators] extra above.
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.3", "mypy>=1.9"]

[tool.setuptools.packages.find]
where = ["."]
include = ["decision*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
