[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "valgo-execution-node"
version = "0.1.0"
description = "Broker-facing executor. Runs on EC2 with the broker SDK loaded."
requires-python = ">=3.11"
dependencies = [
    "valgo-common>=0.1,<0.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "NorenRestApiPy>=0.0.22",
    "websocket-client>=1.7",
    "pyotp>=2.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.3", "mypy>=1.9"]

[tool.setuptools.packages.find]
where = ["."]
include = ["execution_node*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
