[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "valgo-execution-router"
version = "0.1.0"
description = "Pre-trade gate: idempotency, risk, rate limit, dispatch"
requires-python = ">=3.11"
dependencies = [
    "valgo-common>=0.1,<0.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.3", "mypy>=1.9"]

[tool.setuptools.packages.find]
where = ["."]
include = ["execution_router*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
