[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "valgo-webhook"
version = "0.1.0"
description = "TradingView webhook receiver — HMAC-verified, forwards to execution router"
requires-python = ">=3.11"
dependencies = [
    "valgo-common>=0.1,<0.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.3"]

[tool.setuptools.packages.find]
where = ["."]
include = ["webhook*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
